overflow-fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -113,6 +113,7 @@ main {
   background-position: center;
 }
 footer {
+  overflow: hidden;
   width: 100%;
   background: rgb(0, 21, 46);
 }
